welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:6: error: not found: value y
			y=nums(i)
                        ^maxValue:8: error: not found: value y
		return y
                       ^maxValue:4: error: type mismatch;
 found   : Unit
 required: Int
	for ( i<- 1 to nums.length-1) {
               ^